[tool.poetry]
name = "ccaaws"
version = "0.1.0"
description = "AWS objects for python"
authors = ["ccdale <chris.allison@hivehome.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.11.5"
ccalogging = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
